# ssm.guide

./: .editorconfig  .gitignore  .nojekyll  CHANGELOG.md  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-CODE  README.md  _macros.tex  _mathjax-config.html  _navbar-breadcrumb.html  _prevnext-fix.html  _quarto.yml  index.html  index.qmd  preview.ps1  pyproject.toml  references.bib  render.ps1  render.sh  requirements.txt  robots.txt  search.json  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: clarity-or-content.md  config.yml  error-or-typo.md
.github/workflows/: publish.yml
chapters/: references.html  references.qmd
chapters/00-front/: acknowledgements.html  acknowledgements.qmd  notation.html  notation.qmd  preface.html  preface.qmd  reader-guide.html  reader-guide.qmd  roadmap.html  roadmap.qmd
chapters/01-introduction/: index.html  index.qmd
chapters/02-foundations/: 01-state-as-memory.html  01-state-as-memory.qmd  02-continuous-time.html  02-continuous-time.qmd  03-discretisation.html  03-discretisation.qmd  04-recurrence-convolution-toeplitz.html  04-recurrence-convolution-toeplitz.qmd  05-transfer-functions.html  05-transfer-functions.qmd
chapters/03-s4/: 06-memory-problem.html  06-memory-problem.qmd  07-hippo.html  (+7 more)
figures/: README.md
styles/: dark.scss  light.scss  theme.scss
tests/: test_continuous_projection.py  test_diagonal.py  test_discretisation.py  test_hippo.py  test_recurrence_equals_convolution.py  test_s4_kernel.py  test_scan.py  test_structured_matrices.py  test_transfer.py
(+70 files in other folders)
